:bug: Fix u-table-view not align

--- a/src/u-tooltip.vue/module.css
+++ b/src/u-tooltip.vue/module.css
@@ -1,4 +1,4 @@
-$tooltip-background-color: rgba(71,88,107,0.9);
+$tooltip-background-color: rgba(71, 88, 107, 0.9);
 $tooltip-arrow-size: 6px;
 $tooltip-arrow-offset: 16px;
 
@@ -113,4 +113,9 @@ $tooltip-arrow-offset: 16px;
 
 .body[size^="auto"] {
     max-height: none;
+}
+
+.root ::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background: #9da8b3;
 }
